clang/test/CIR/Transforms/abi-lowering/datalayout-missing-error.cir
// RUN: not cir-opt %s -cir-call-conv-lowering=target=test 2>&1 | FileCheck %s

// The pass requires a `dlti.dl_spec` attribute on the module.  Without it,
// classification cannot query type sizes / alignments, so the pass emits a
// diagnostic and fails.

!s32i = !cir.int<s, 32>

module {

  cir.func @passthrough(%arg0: !s32i) -> !s32i {
    cir.return %arg0 : !s32i
  }

}

// CHECK: error: 'builtin.module' op CallConvLowering requires a DataLayout (dlti.dl_spec attribute on the module)
